package projeto;

public class Principal {
	public static void main(String[] args) {

		ConsoleUI ui = new ConsoleUI();
		ui.iniciar();
	}
}
